# sk

sk_pc_client/: Cargo.toml
sk_pc_client/src/: main.rs
sk_pc_client/src/menus/: chat.rs  chats.rs  main.rs  mod.rs
sk_server/: Cargo.toml
sk_web_client/: Cargo.toml
