[package]
name = "sk_web_client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Andrew Kozmin <syn.kolbasyn.06@gmail.com>"]
description = "sk messanger web client"
readme = "README.md"
homepage = "https://github.com/SynKolbasyn/sk"
repository = "https://github.com/SynKolbasyn/sk"

[dependencies]
